tests/testcases/invalid/semantic/84_prefix_decrement_on_rvalue.ciel
// Error: prefix decrement on rvalue
int main() {
    int a = 5;

    // Error: (a++) is rvalue, prefix -- requires lvalue
    --(a++);

    return 0;
}
